--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -499,7 +499,8 @@
     "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y \n",
     "    \n",
     "    # forward pass \n",
-    "    emb = C[Xb] # embed the characters into vectors "
+    "    emb = C[Xb] # embed the characters into vectors \n",
+    "    x = emb.view(emb.shape[0], -1) # concatenate the vectors "
    ]
   }
  ],
