--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -500,7 +500,10 @@
     "    \n",
     "    # forward pass \n",
     "    emb = C[Xb] # embed the characters into vectors \n",
-    "    x = emb.view(emb.shape[0], -1) # concatenate the vectors "
+    "    x = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
+    "    for layer in layers:\n",
+    "        x = layer(x)\n",
+    "    loss = F.cross_entropy(x, Yb) # loss function "
    ]
   }
  ],
