--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -503,7 +503,11 @@
     "    x = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
     "    for layer in layers:\n",
     "        x = layer(x)\n",
-    "    loss = F.cross_entropy(x, Yb) # loss function "
+    "    loss = F.cross_entropy(x, Yb) # loss function \n",
+    "    \n",
+    "    # backward pass \n",
+    "    for layer in layers:\n",
+    "        layer.out.retain_grad() # AFTER_DEBUG: would take out retain_graph "
    ]
   }
  ],
