--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -507,7 +507,10 @@
     "    \n",
     "    # backward pass \n",
     "    for layer in layers:\n",
-    "        layer.out.retain_grad() # AFTER_DEBUG: would take out retain_graph "
+    "        layer.out.retain_grad() # AFTER_DEBUG: would take out retain_graph \n",
+    "    for p in parameters:\n",
+    "        p.grad = None \n",
+    "    loss.backward() "
    ]
   }
  ],
