--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -510,7 +510,10 @@
     "        layer.out.retain_grad() # AFTER_DEBUG: would take out retain_graph \n",
     "    for p in parameters:\n",
     "        p.grad = None \n",
-    "    loss.backward() "
+    "    loss.backward() \n",
+    "    \n",
+    "    # update \n",
+    "    lr = 0.1 if i < 150000 else 0.01 # step learning rate decay "
    ]
   }
  ],
