--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -513,7 +513,13 @@
     "    loss.backward() \n",
     "    \n",
     "    # update \n",
-    "    lr = 0.1 if i < 150000 else 0.01 # step learning rate decay "
+    "    lr = 0.1 if i < 150000 else 0.01 # step learning rate decay \n",
+    "    for p in parameters:\n",
+    "        p.data += -lr * p.grad \n",
+    "        \n",
+    "    # track stats \n",
+    "    if i % 10000 == 0: # print every once in a while \n",
+    "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')"
    ]
   }
  ],
