--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -519,7 +519,8 @@
     "        \n",
     "    # track stats \n",
     "    if i % 10000 == 0: # print every once in a while \n",
-    "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')"
+    "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.log10().item())"
    ]
   }
  ],
