--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -520,7 +520,9 @@
     "    # track stats \n",
     "    if i % 10000 == 0: # print every once in a while \n",
     "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
-    "    lossi.append(loss.log10().item())"
+    "    lossi.append(loss.log10().item())\n",
+    "    with torch.no_grad():\n",
+    "        ud.append([((lr*p.grad).std() / p.data.std()).log10().item() for p in parameters])"
    ]
   }
  ],
