--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -522,7 +522,10 @@
     "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
     "    lossi.append(loss.log10().item())\n",
     "    with torch.no_grad():\n",
-    "        ud.append([((lr*p.grad).std() / p.data.std()).log10().item() for p in parameters])"
+    "        ud.append([((lr*p.grad).std() / p.data.std()).log10().item() for p in parameters])\n",
+    "        \n",
+    "    if i >= 1000:\n",
+    "        break # AFTER_DEBUG: would take out obviously to run full optimization "
    ]
   }
  ],
