--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -543,7 +543,11 @@
    "outputs": [],
    "source": [
     "# visualize histograms \n",
-    "plt.figure(figsize=(20, 4)) # width and height of the plot "
+    "plt.figure(figsize=(20, 4)) # width and height of the plot \n",
+    "legends = [] \n",
+    "for i, layer in enumerate(layers[:-.1]): # note: exclude the output layer \n",
+    "    if isinstance(layer, Tanh):\n",
+    "        t = layer.out "
    ]
   }
  ],
