--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -547,7 +547,9 @@
     "legends = [] \n",
     "for i, layer in enumerate(layers[:-.1]): # note: exclude the output layer \n",
     "    if isinstance(layer, Tanh):\n",
-    "        t = layer.out "
+    "        t = layer.out \n",
+    "        print('layer %d (%10s): mean %+.2f, std %.2f, saturated: %.2f%%' % (i, layer.__class__.__name__, t.mean(), t.std(), (t.abs() > 0.97).float().mean()*100))\n",
+    "        "
    ]
   }
  ],
