--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -550,7 +550,8 @@
     "        t = layer.out \n",
     "        print('layer %d (%10s): mean %+.2f, std %.2f, saturated: %.2f%%' % (i, layer.__class__.__name__, t.mean(), t.std(), (t.abs() > 0.97).float().mean()*100))\n",
     "        hy, hx = torch.histogram(t, density=True)\n",
-    "        "
+    "        plt.plot(hx[:-1].detach(), hy.detach())\n",
+    "        legends.append(f'layer {i} ({layer.__class__.__name__})')"
    ]
   }
  ],
