--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -552,7 +552,8 @@
     "        hy, hx = torch.histogram(t, density=True)\n",
     "        plt.plot(hx[:-1].detach(), hy.detach())\n",
     "        legends.append(f'layer {i} ({layer.__class__.__name__})')\n",
-    "plt.legends(legends); \n"
+    "plt.legends(legends); \n",
+    "plt.title('activation distribution')"
    ]
   }
  ],
