--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -538,14 +538,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "slice indices must be integers or None or have an __index__ method",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m4\u001b[39m)) \u001b[38;5;66;03m# width and height of the plot \u001b[39;00m\n\u001b[1;32m      3\u001b[0m legends \u001b[38;5;241m=\u001b[39m [] \n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, layer \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m.1\u001b[39;49m\u001b[43m]\u001b[49m): \u001b[38;5;66;03m# note: exclude the output layer \u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(layer, Tanh):\n\u001b[1;32m      6\u001b[0m         t \u001b[38;5;241m=\u001b[39m layer\u001b[38;5;241m.\u001b[39mout \n",
+      "\u001b[0;31mTypeError\u001b[0m: slice indices must be integers or None or have an __index__ method"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2000x400 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# visualize histograms \n",
     "plt.figure(figsize=(20, 4)) # width and height of the plot \n",
     "legends = [] \n",
-    "for i, layer in enumerate(layers[:-.1]): # note: exclude the output layer \n",
+    "for i, layer in enumerate(layers[:-1]): # note: exclude the output layer \n",
     "    if isinstance(layer, Tanh):\n",
     "        t = layer.out \n",
     "        print('layer %d (%10s): mean %+.2f, std %.2f, saturated: %.2f%%' % (i, layer.__class__.__name__, t.mean(), t.std(), (t.abs() > 0.97).float().mean()*100))\n",
@@ -555,6 +576,13 @@
     "plt.legends(legends); \n",
     "plt.title('activation distribution')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
