--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -593,7 +593,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# visualize histograms \n",
+    "plt.figure(figsize=(20, 4)) # width and height of the plot \n"
+   ]
   }
  ],
  "metadata": {
