--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -595,7 +595,12 @@
    "outputs": [],
    "source": [
     "# visualize histograms \n",
-    "plt.figure(figsize=(20, 4)) # width and height of the plot \n"
+    "plt.figure(figsize=(20, 4)) # width and height of the plot \n",
+    "legends = []\n",
+    "for i, layer in enumerate(layers[:-1]): # note: exclude the output layer \n",
+    "    if isinstance(layer, Tanh):\n",
+    "        t = layer.out.grad \n",
+    "        print('layer %d (%10s): mean %+f, std %e' % (i, layer.__class__.__name__, t.mean(), t.std()))"
    ]
   }
  ],
