--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -600,7 +600,9 @@
     "for i, layer in enumerate(layers[:-1]): # note: exclude the output layer \n",
     "    if isinstance(layer, Tanh):\n",
     "        t = layer.out.grad \n",
-    "        print('layer %d (%10s): mean %+f, std %e' % (i, layer.__class__.__name__, t.mean(), t.std()))"
+    "        print('layer %d (%10s): mean %+f, std %e' % (i, layer.__class__.__name__, t.mean(), t.std()))\n",
+    "        hy, hx = torch.histogram(t, density=True)\n",
+    "        "
    ]
   }
  ],
