--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -602,7 +602,8 @@
     "        t = layer.out.grad \n",
     "        print('layer %d (%10s): mean %+f, std %e' % (i, layer.__class__.__name__, t.mean(), t.std()))\n",
     "        hy, hx = torch.histogram(t, density=True)\n",
-    "        "
+    "        plt.plot(hx[:-1].detach(), hy.detach())\n",
+    "        legends.append(f'layer {i} ({layer.__class__.__name__})')"
    ]
   }
  ],
