--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -604,7 +604,8 @@
     "        hy, hx = torch.histogram(t, density=True)\n",
     "        plt.plot(hx[:-1].detach(), hy.detach())\n",
     "        legends.append(f'layer {i} ({layer.__class__.__name__})')\n",
-    "plt.legend(legends); "
+    "plt.legend(legends); \n",
+    "plt.title('gradient distribution')"
    ]
   }
  ],
