--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -646,7 +646,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize histograms \n"
+    "# visualize histogram \n",
+    "plt.figure(figsize=(20, 4)) # width and height of the plot \n",
+    "legends = []\n",
+    "for i, p in enumerate(parameters):\n",
+    "    t = p.grad "
    ]
   }
  ],
