--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -650,7 +650,9 @@
     "plt.figure(figsize=(20, 4)) # width and height of the plot \n",
     "legends = []\n",
     "for i, p in enumerate(parameters):\n",
-    "    t = p.grad "
+    "    t = p.grad \n",
+    "    if p.ndim == 2:\n",
+    "        print('weight %10s | mean %+f | std %e | grad:data ratio %e' % (tuple(p.shape), t.mean(), t.std(), t.std() / p.std()))"
    ]
   }
  ],
