--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -652,7 +652,12 @@
     "for i, p in enumerate(parameters):\n",
     "    t = p.grad \n",
     "    if p.ndim == 2:\n",
-    "        print('weight %10s | mean %+f | std %e | grad:data ratio %e' % (tuple(p.shape), t.mean(), t.std(), t.std() / p.std()))"
+    "        print('weight %10s | mean %+f | std %e | grad:data ratio %e' % (tuple(p.shape), t.mean(), t.std(), t.std() / p.std()))\n",
+    "        hy, hx = torch.histogram(t, density=True)\n",
+    "        plt.plot(hx[:-1].detach(), hy.detach())\n",
+    "        legends.append(f'{i} {tuple(p.shape)}')\n",
+    "plt.legend(legends)\n",
+    "plt.title('weight gradient distribution'); "
    ]
   }
  ],
