--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -689,7 +689,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(20, 4))\n",
+    "legends = []\n",
+    "for i,p in enumerate(parameters):\n",
+    "    if p.ndim == 2:\n",
+    "        plt.plot([ud[j][i] for j in range(len(ud))])\n",
+    "        legends.append('param %d' % i)"
+   ]
   }
  ],
  "metadata": {
