--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -695,7 +695,9 @@
     "for i,p in enumerate(parameters):\n",
     "    if p.ndim == 2:\n",
     "        plt.plot([ud[j][i] for j in range(len(ud))])\n",
-    "        legends.append('param %d' % i)"
+    "        legends.append('param %d' % i)\n",
+    "plt.plot([0, len(ud)], [-3, -3], 'k') # these ratio should be ~1e-3, indicate on plot \n",
+    "plt.legend(legends); "
    ]
   }
  ],
