--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -717,7 +717,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@torch.no_grad() # this decorator disables gradient tracking "
+    "@torch.no_grad() # this decorator disables gradient tracking \n",
+    "def split_loss(split):\n",
+    "    x,y = {\n",
+    "        'train': (Xtr, Ytr),\n",
+    "        'val': (Xdev, Ydev), \n",
+    "        'test': (Xte, Yte), \n",
+    "    }"
    ]
   }
  ],
