--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -723,7 +723,9 @@
     "        'train': (Xtr, Ytr),\n",
     "        'val': (Xdev, Ydev), \n",
     "        'test': (Xte, Yte), \n",
-    "    }"
+    "    }[split]\n",
+    "    emb = C[x] # (N, block_size, n_embd)\n",
+    "    x = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)"
    ]
   }
  ],
