--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -725,7 +725,10 @@
     "        'test': (Xte, Yte), \n",
     "    }[split]\n",
     "    emb = C[x] # (N, block_size, n_embd)\n",
-    "    x = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)"
+    "    x = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "    for layer in layers:\n",
+    "        x = layer(x) \n",
+    "    loss = F.cross_entropy(x, y)"
    ]
   }
  ],
