--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -728,7 +728,8 @@
     "    x = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
     "    for layer in layers:\n",
     "        x = layer(x) \n",
-    "    loss = F.cross_entropy(x, y)"
+    "    loss = F.cross_entropy(x, y)\n",
+    "    print(split, loss.item())"
    ]
   }
  ],
