--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -729,7 +729,11 @@
     "    for layer in layers:\n",
     "        x = layer(x) \n",
     "    loss = F.cross_entropy(x, y)\n",
-    "    print(split, loss.item())"
+    "    print(split, loss.item())\n",
+    "    \n",
+    "# put layers into eval mode \n",
+    "for layer in layers:\n",
+    "    layer.training = False \n"
    ]
   }
  ],
