--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -733,7 +733,9 @@
     "    \n",
     "# put layers into eval mode \n",
     "for layer in layers:\n",
-    "    layer.training = False \n"
+    "    layer.training = False \n",
+    "split_loss('train')\n",
+    "split_loss('val')"
    ]
   }
  ],
