--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -713,9 +713,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.4002976417541504\n",
+      "val 2.398247003555298\n"
+     ]
+    }
+   ],
    "source": [
     "@torch.no_grad() # this decorator disables gradient tracking \n",
     "def split_loss(split):\n",
@@ -737,6 +746,13 @@
     "split_loss('train')\n",
     "split_loss('val')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
