--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -752,7 +752,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sample from the model \n",
+    "g = torch.Generator().manual_seed(2147483647 + 10)"
+   ]
   }
  ],
  "metadata": {
