--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -754,7 +754,13 @@
    "outputs": [],
    "source": [
     "# sample from the model \n",
-    "g = torch.Generator().manual_seed(2147483647 + 10)"
+    "g = torch.Generator().manual_seed(2147483647 + 10)\n",
+    "\n",
+    "for _ in range(20):\n",
+    "    \n",
+    "    out = []\n",
+    "    context = [0] * block_size # initialize with all ... \n",
+    "    "
    ]
   }
  ],
