--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -760,7 +760,9 @@
     "    \n",
     "    out = []\n",
     "    context = [0] * block_size # initialize with all ... \n",
-    "    "
+    "    while True:\n",
+    "        # forward pass the neural net \n",
+    "        emb = C[torch.tensor([context])] # (1, block_size, n_embd)"
    ]
   }
  ],
