--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -762,7 +762,10 @@
     "    context = [0] * block_size # initialize with all ... \n",
     "    while True:\n",
     "        # forward pass the neural net \n",
-    "        emb = C[torch.tensor([context])] # (1, block_size, n_embd)"
+    "        emb = C[torch.tensor([context])] # (1, block_size, n_embd)\n",
+    "        x = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
+    "        for layer in layers:\n",
+    "            x = layer(x)"
    ]
   }
  ],
