--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -765,7 +765,9 @@
     "        emb = C[torch.tensor([context])] # (1, block_size, n_embd)\n",
     "        x = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
     "        for layer in layers:\n",
-    "            x = layer(x)"
+    "            x = layer(x)\n",
+    "        logits = x \n",
+    "        probs = F.softmax(logits, dim=1)"
    ]
   }
  ],
