--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -767,7 +767,9 @@
     "        for layer in layers:\n",
     "            x = layer(x)\n",
     "        logits = x \n",
-    "        probs = F.softmax(logits, dim=1)"
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        # sample from the distribution \n",
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()"
    ]
   }
  ],
