--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -769,7 +769,10 @@
     "        logits = x \n",
     "        probs = F.softmax(logits, dim=1)\n",
     "        # sample from the distribution \n",
-    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()"
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "        # shift the context window and track the samples \n",
+    "        context = context[1:] + [ix]\n",
+    "        out.append(ix)"
    ]
   }
  ],
