--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -772,7 +772,10 @@
     "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
     "        # shift the context window and track the samples \n",
     "        context = context[1:] + [ix]\n",
-    "        out.append(ix)"
+    "        out.append(ix)\n",
+    "        # if we sample the special '.' token, break \n",
+    "        if ix == 0:\n",
+    "            break "
    ]
   }
  ],
