--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -775,7 +775,8 @@
     "        out.append(ix)\n",
     "        # if we sample the special '.' token, break \n",
     "        if ix == 0:\n",
-    "            break "
+    "            break \n",
+    "    print(''.join(itos[i] for i in out)) # decode and print the generated word "
    ]
   }
  ],
