--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -749,9 +749,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carpah.\n",
+      "qarlileif.\n",
+      "jmrix.\n",
+      "thty.\n",
+      "sacansa.\n",
+      "jazhnte.\n",
+      "dpn.\n",
+      "arciigqeiunellaia.\n",
+      "chriiv.\n",
+      "kalein.\n",
+      "dhlm.\n",
+      "join.\n",
+      "qhinn.\n",
+      "sroin.\n",
+      "arian.\n",
+      "quiqaelogiearyxix.\n",
+      "kaeklinsan.\n",
+      "ed.\n",
+      "ecoia.\n",
+      "gtleley.\n"
+     ]
+    }
+   ],
    "source": [
     "# sample from the model \n",
     "g = torch.Generator().manual_seed(2147483647 + 10)\n",
@@ -778,6 +805,13 @@
     "            break \n",
     "    print(''.join(itos[i] for i in out)) # decode and print the generated word "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
