--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -811,7 +811,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# BatchNorm forward pass as a widget \n",
+    "\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual \n",
+    "import ipywidgets as widgets \n",
+    "import scipy.stats as stats \n",
+    "import numpy as np "
+   ]
   }
  ],
  "metadata": {
