--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -817,7 +817,11 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual \n",
     "import ipywidgets as widgets \n",
     "import scipy.stats as stats \n",
-    "import numpy as np "
+    "import numpy as np \n",
+    "\n",
+    "def normshow(x0):\n",
+    "    \n",
+    "    g = torch.Generator().manual_seed(2147483647+1)"
    ]
   }
  ],
