--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -821,7 +821,9 @@
     "\n",
     "def normshow(x0):\n",
     "    \n",
-    "    g = torch.Generator().manual_seed(2147483647+1)"
+    "    g = torch.Generator().manual_seed(2147483647+1)\n",
+    "    x = torch.randn(5, generator=g) * 5 \n",
+    "    x[0] = x0 "
    ]
   }
  ],
