--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -823,7 +823,8 @@
     "    \n",
     "    g = torch.Generator().manual_seed(2147483647+1)\n",
     "    x = torch.randn(5, generator=g) * 5 \n",
-    "    x[0] = x0 "
+    "    x[0] = x0 # override the 0th example with the slider \n",
+    "    mu = x.mean() "
    ]
   }
  ],
