--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -825,7 +825,8 @@
     "    x = torch.randn(5, generator=g) * 5 \n",
     "    x[0] = x0 # override the 0th example with the slider \n",
     "    mu = x.mean() \n",
-    "    sig = x.std() "
+    "    sig = x.std() \n",
+    "    y = (x - mu)/sig "
    ]
   }
  ],
