--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -826,7 +826,11 @@
     "    x[0] = x0 # override the 0th example with the slider \n",
     "    mu = x.mean() \n",
     "    sig = x.std() \n",
-    "    y = (x - mu)/sig "
+    "    y = (x - mu)/sig \n",
+    "    \n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    # plot 0 \n",
+    "    "
    ]
   }
  ],
