--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -830,7 +830,16 @@
     "    \n",
     "    plt.figure(figsize=(10, 5))\n",
     "    # plot 0 \n",
-    "    "
+    "    plt.plot([-6, 6], [0,0], 'k')\n",
+    "    # plot the mean and std \n",
+    "    xx = np.linspace(-6, 6, 100)\n",
+    "    plt.plot(xx, stats.norm.pdf(xx, mu, sig), 'b')\n",
+    "    xx = np.linspace(-6, 6, 100)\n",
+    "    plt.plot(xx, stats.norm.pdf(xx, 0, 1), 'r')\n",
+    "    # plot little lines connecting input and output \n",
+    "    for i in range(len(x)):\n",
+    "        plt.plot([x[i], y[i]], [1, 0], 'k', alpha=0.2)\n",
+    "    # plot the input and output values "
    ]
   }
  ],
