--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -839,7 +839,9 @@
     "    # plot little lines connecting input and output \n",
     "    for i in range(len(x)):\n",
     "        plt.plot([x[i], y[i]], [1, 0], 'k', alpha=0.2)\n",
-    "    # plot the input and output values "
+    "    # plot the input and output values \n",
+    "    plt.scatter(x.data, torch.ones_like(x).data, c='b', s=100)\n",
+    "    plt.scatter(y.data, torch.zeros_like(y).data, c='r', s=100)"
    ]
   }
  ],
