--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -841,7 +841,10 @@
     "        plt.plot([x[i], y[i]], [1, 0], 'k', alpha=0.2)\n",
     "    # plot the input and output values \n",
     "    plt.scatter(x.data, torch.ones_like(x).data, c='b', s=100)\n",
-    "    plt.scatter(y.data, torch.zeros_like(y).data, c='r', s=100)"
+    "    plt.scatter(y.data, torch.zeros_like(y).data, c='r', s=100)\n",
+    "    plt.xlim(-6, 6)\n",
+    "    # title \n",
+    "    plt.title('input mu %.2f std %.2f' % (mu, sig))"
    ]
   }
  ],
