--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -844,7 +844,9 @@
     "    plt.scatter(y.data, torch.zeros_like(y).data, c='r', s=100)\n",
     "    plt.xlim(-6, 6)\n",
     "    # title \n",
-    "    plt.title('input mu %.2f std %.2f' % (mu, sig))"
+    "    plt.title('input mu %.2f std %.2f' % (mu, sig))\n",
+    "    \n",
+    "interact(normshow, x0=(-30,30,0.5)); "
    ]
   }
  ],
