--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1269,7 +1269,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Linear: activation statistics of forward and backward pass \n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)"
+   ]
   }
  ],
  "metadata": {
