--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1272,7 +1272,9 @@
    "source": [
     "# Linear: activation statistics of forward and backward pass \n",
     "\n",
-    "g = torch.Generator().manual_seed(2147483647)"
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "a = torch.randn((1000,1), requires_grad=True, generator=g)      # a.grad = b.T @ c.grad "
    ]
   }
  ],
