--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1274,7 +1274,8 @@
     "\n",
     "g = torch.Generator().manual_seed(2147483647)\n",
     "\n",
-    "a = torch.randn((1000,1), requires_grad=True, generator=g)      # a.grad = b.T @ c.grad "
+    "a = torch.randn((1000,1), requires_grad=True, generator=g)      # a.grad = b.T @ c.grad \n",
+    "b = torch.randn((1000,1000), requires_grad=True, generator=g)   # b.grad = c.grad @ a.T "
    ]
   }
  ],
