--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1276,7 +1276,11 @@
     "\n",
     "a = torch.randn((1000,1), requires_grad=True, generator=g)      # a.grad = b.T @ c.grad \n",
     "b = torch.randn((1000,1000), requires_grad=True, generator=g)   # b.grad = c.grad @ a.T \n",
-    "c = b @ a "
+    "c = b @ a \n",
+    "loss = torch.randn(1000, generator=g) @ c \n",
+    "a.retain_grad() \n",
+    "b.retain_grad()\n",
+    "c.retain_grad() \n"
    ]
   }
  ],
