--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1280,7 +1280,8 @@
     "loss = torch.randn(1000, generator=g) @ c \n",
     "a.retain_grad() \n",
     "b.retain_grad()\n",
-    "c.retain_grad() \n"
+    "c.retain_grad() \n",
+    "loss.backward() "
    ]
   }
  ],
