--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1281,7 +1281,9 @@
     "a.retain_grad() \n",
     "b.retain_grad()\n",
     "c.retain_grad() \n",
-    "loss.backward() "
+    "loss.backward() \n",
+    "print('a std:', a.std().item())\n",
+    "print('b std:', b.std().item())"
    ]
   }
  ],
