--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1283,7 +1283,8 @@
     "c.retain_grad() \n",
     "loss.backward() \n",
     "print('a std:', a.std().item())\n",
-    "print('b std:', b.std().item())"
+    "print('b std:', b.std().item())\n",
+    "print('c std:', c.std().item())"
    ]
   }
  ],
