--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1284,7 +1284,8 @@
     "loss.backward() \n",
     "print('a std:', a.std().item())\n",
     "print('b std:', b.std().item())\n",
-    "print('c std:', c.std().item())"
+    "print('c std:', c.std().item())\n",
+    "print('-------')"
    ]
   }
  ],
