--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1285,7 +1285,10 @@
     "print('a std:', a.std().item())\n",
     "print('b std:', b.std().item())\n",
     "print('c std:', c.std().item())\n",
-    "print('-------')"
+    "print('-------')\n",
+    "print('c grad std:', c.grad.std().item())\n",
+    "print('a grad std:', a.grad.std().item())\n",
+    "print('b grad std:', b.grad.std().item())"
    ]
   }
  ],
