--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1266,9 +1266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a std: 0.9875972270965576\n",
+      "b std: 1.0006722211837769\n",
+      "c std: 31.01241683959961\n",
+      "-------\n",
+      "c grad std: 0.9782556295394897\n",
+      "a grad std: 30.8818302154541\n",
+      "b grad std: 0.9666601419448853\n"
+     ]
+    }
+   ],
    "source": [
     "# Linear: activation statistics of forward and backward pass \n",
     "\n",
@@ -1290,6 +1304,13 @@
     "print('a grad std:', a.grad.std().item())\n",
     "print('b grad std:', b.grad.std().item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
