--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1310,7 +1310,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Linear + BatchNorm: activation statistics of forward and backward pass "
+   ]
   }
  ],
  "metadata": {
