--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1311,7 +1311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Linear + BatchNorm: activation statistics of forward and backward pass "
+    "# Linear + BatchNorm: activation statistics of forward and backward pass \n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)"
    ]
   }
  ],
