--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1313,7 +1313,10 @@
    "source": [
     "# Linear + BatchNorm: activation statistics of forward and backward pass \n",
     "\n",
-    "g = torch.Generator().manual_seed(2147483647)"
+    "g = torch.Generator().manual_seed(2147483647)\n",
+    "\n",
+    "n = 1000 \n",
+    "# linear layer --- "
    ]
   }
  ],
