--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1316,7 +1316,9 @@
     "g = torch.Generator().manual_seed(2147483647)\n",
     "\n",
     "n = 1000 \n",
-    "# linear layer --- "
+    "# linear layer --- \n",
+    "inp = torch.randn(n, requires_grad=True, generator=g)\n",
+    "w = torch.randn((n, n), requires_grad=True, generator=g) # / n**0.5 "
    ]
   }
  ],
