--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1318,7 +1318,8 @@
     "n = 1000 \n",
     "# linear layer --- \n",
     "inp = torch.randn(n, requires_grad=True, generator=g)\n",
-    "w = torch.randn((n, n), requires_grad=True, generator=g) # / n**0.5 "
+    "w = torch.randn((n, n), requires_grad=True, generator=g) # / n**0.5 \n",
+    "x = w @ inp "
    ]
   }
  ],
