--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1319,7 +1319,8 @@
     "# linear layer --- \n",
     "inp = torch.randn(n, requires_grad=True, generator=g)\n",
     "w = torch.randn((n, n), requires_grad=True, generator=g) # / n**0.5 \n",
-    "x = w @ inp "
+    "x = w @ inp \n",
+    "# bn layer --- "
    ]
   }
  ],
