--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1320,7 +1320,9 @@
     "inp = torch.randn(n, requires_grad=True, generator=g)\n",
     "w = torch.randn((n, n), requires_grad=True, generator=g) # / n**0.5 \n",
     "x = w @ inp \n",
-    "# bn layer --- "
+    "# bn layer --- \n",
+    "xmean = x.mean()\n",
+    "xvar = x.var()"
    ]
   }
  ],
