--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1322,7 +1322,8 @@
     "x = w @ inp \n",
     "# bn layer --- \n",
     "xmean = x.mean()\n",
-    "xvar = x.var()"
+    "xvar = x.var()\n",
+    "out = (x - xmean) / torch.sqrt(xvar + 1e-5)"
    ]
   }
  ],
