--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1323,7 +1323,8 @@
     "# bn layer --- \n",
     "xmean = x.mean()\n",
     "xvar = x.var()\n",
-    "out = (x - xmean) / torch.sqrt(xvar + 1e-5)"
+    "out = (x - xmean) / torch.sqrt(xvar + 1e-5)\n",
+    "# ----- \n"
    ]
   }
  ],
