--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1324,7 +1324,11 @@
     "xmean = x.mean()\n",
     "xvar = x.var()\n",
     "out = (x - xmean) / torch.sqrt(xvar + 1e-5)\n",
-    "# ----- \n"
+    "# ----- \n",
+    "loss = out @ torch.randn(n, generator=g)\n",
+    "inp.retain_grad() \n",
+    "x.retain_grad()\n",
+    "w.retain_grad()\n"
    ]
   }
  ],
