--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1328,7 +1328,8 @@
     "loss = out @ torch.randn(n, generator=g)\n",
     "inp.retain_grad() \n",
     "x.retain_grad()\n",
-    "w.retain_grad()\n"
+    "w.retain_grad()\n",
+    "out.retain_grad()\n"
    ]
   }
  ],
