--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1329,7 +1329,8 @@
     "inp.retain_grad() \n",
     "x.retain_grad()\n",
     "w.retain_grad()\n",
-    "out.retain_grad()\n"
+    "out.retain_grad()\n",
+    "loss.backward() \n"
    ]
   }
  ],
