--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1330,7 +1330,9 @@
     "x.retain_grad()\n",
     "w.retain_grad()\n",
     "out.retain_grad()\n",
-    "loss.backward() \n"
+    "loss.backward() \n",
+    "\n",
+    "print('inp std: ', inp.std().item())"
    ]
   }
  ],
