--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1332,7 +1332,10 @@
     "out.retain_grad()\n",
     "loss.backward() \n",
     "\n",
-    "print('inp std: ', inp.std().item())"
+    "print('inp std: ', inp.std().item())\n",
+    "print('w std: ', w.std().item())\n",
+    "print('x std: ', x.std().item())\n",
+    "print('out std: ', out.std().item())\n"
    ]
   }
  ],
