--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1335,7 +1335,8 @@
     "print('inp std: ', inp.std().item())\n",
     "print('w std: ', w.std().item())\n",
     "print('x std: ', x.std().item())\n",
-    "print('out std: ', out.std().item())\n"
+    "print('out std: ', out.std().item())\n",
+    "print('-------')"
    ]
   }
  ],
