--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1336,7 +1336,8 @@
     "print('w std: ', w.std().item())\n",
     "print('x std: ', x.std().item())\n",
     "print('out std: ', out.std().item())\n",
-    "print('-------')"
+    "print('-------')\n",
+    "print('out grad std: ', out.grad.std().item())"
    ]
   }
  ],
