--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1337,7 +1337,9 @@
     "print('x std: ', x.std().item())\n",
     "print('out std: ', out.std().item())\n",
     "print('-------')\n",
-    "print('out grad std: ', out.grad.std().item())"
+    "print('out grad std: ', out.grad.std().item())\n",
+    "print('x grad std: ', x.grad.std().item())\n",
+    "print('w grad std: ', w.grad.std().item())"
    ]
   }
  ],
