--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1339,7 +1339,8 @@
     "print('-------')\n",
     "print('out grad std: ', out.grad.std().item())\n",
     "print('x grad std: ', x.grad.std().item())\n",
-    "print('w grad std: ', w.grad.std().item())"
+    "print('w grad std: ', w.grad.std().item())\n",
+    "print('inp grad std: ', inp.grad.std().item())"
    ]
   }
  ],
