--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -1307,9 +1307,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inp std:  0.9875972270965576\n",
+      "w std:  1.0006722211837769\n",
+      "x std:  31.01241683959961\n",
+      "out std:  1.0\n",
+      "-------\n",
+      "out grad std:  0.9782556295394897\n",
+      "x grad std:  0.031543977558612823\n",
+      "w grad std:  0.031169468536973\n",
+      "inp grad std:  0.9953053593635559\n"
+     ]
+    }
+   ],
    "source": [
     "# Linear + BatchNorm: activation statistics of forward and backward pass \n",
     "\n",
@@ -1342,6 +1358,13 @@
     "print('w grad std: ', w.grad.std().item())\n",
     "print('inp grad std: ', inp.grad.std().item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
