--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -17,7 +17,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read in all the words \n"
+   ]
   }
  ],
  "metadata": {
