--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -18,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in all the words \n"
+    "# read in all the words \n",
+    "words = open('names.txt', 'r').read().splitlines()\n",
+    "print(len(words))"
    ]
   }
  ],
