--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "# read in all the words \n",
     "words = open('names.txt', 'r').read().splitlines()\n",
-    "print(len(words))"
+    "print(len(words))\n",
+    "print(max(len(w)) for w in words)"
    ]
   }
  ],
