--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -14,15 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32033\n",
+      "15\n",
+      "['emma', 'olivia', 'ava', 'isabella', 'sophia', 'charlotte', 'mia', 'amelia']\n"
+     ]
+    }
+   ],
    "source": [
     "# read in all the words \n",
     "words = open('names.txt', 'r').read().splitlines()\n",
     "print(len(words))\n",
-    "print(max(len(w)) for w in words)"
+    "print(max(len(w) for w in words))\n",
+    "print(words[:8])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
