--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -40,7 +40,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# build the vocabulary of characters and mappings to/from integers \n",
+    "chars = sorted(list(set(''.join(words))))"
+   ]
   }
  ],
  "metadata": {
