--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "# build the vocabulary of characters and mappings to/from integers \n",
-    "chars = sorted(list(set(''.join(words))))"
+    "chars = sorted(list(set(''.join(words))))\n",
+    "stoi = {s:i+1 for i,s in enumerate(chars)}\n"
    ]
   }
  ],
