--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -43,7 +43,9 @@
    "source": [
     "# build the vocabulary of characters and mappings to/from integers \n",
     "chars = sorted(list(set(''.join(words))))\n",
-    "stoi = {s:i+1 for i,s in enumerate(chars)}\n"
+    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
+    "stoi['.'] = 0 \n",
+    "itos = {i:s for s,i in stoi.items()}"
    ]
   }
  ],
