--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -45,7 +45,10 @@
     "chars = sorted(list(set(''.join(words))))\n",
     "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
     "stoi['.'] = 0 \n",
-    "itos = {i:s for s,i in stoi.items()}"
+    "itos = {i:s for s,i in stoi.items()}\n",
+    "vocab_size = len(itos)\n",
+    "print(itos)\n",
+    "print(vocab_size)"
    ]
   }
  ],
