--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -62,9 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# build the dataset \n",
     "block_size = 3 # context length: how many characters do we take to predict the next one? \n",
@@ -73,8 +84,20 @@
     "    X, Y = [], [] \n",
     "    \n",
     "    for w in words:\n",
-    "        context = [0] * block_size "
+    "        context = [0] * block_size \n",
+    "        for ch in w + '.':\n",
+    "            ix = stoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            context = context[1:] + [ix] # crop and append "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
