--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -89,8 +89,20 @@
     "            ix = stoi[ch]\n",
     "            X.append(context)\n",
     "            Y.append(ix)\n",
-    "            context = context[1:] + [ix] # crop and append "
+    "            context = context[1:] + [ix] # crop and append \n",
+    "            \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)\n",
+    "    print(X.shape, Y.shape)\n",
+    "    return X, Y "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
