--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -94,7 +94,13 @@
     "    X = torch.tensor(X)\n",
     "    Y = torch.tensor(Y)\n",
     "    print(X.shape, Y.shape)\n",
-    "    return X, Y "
+    "    return X, Y \n",
+    "\n",
+    "import random \n",
+    "random.seed(42)\n",
+    "random.shuffle(words)\n",
+    "n1 = int(0.8*len(words))\n",
+    "n2 = int(0.9*len(words))"
    ]
   },
   {
