--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -108,9 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# ok biolerplate done, now we get to the action: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
