--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -125,7 +125,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# utility function we will use later when comparing manual gradient to PyTorch gradient "
+   ]
   }
  ],
  "metadata": {
