--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -126,7 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# utility function we will use later when comparing manual gradient to PyTorch gradient "
+    "# utility function we will use later when comparing manual gradient to PyTorch gradient \n",
+    "def cmp(s, dt, t):\n",
+    "    pass "
    ]
   }
  ],
