--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -136,7 +136,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_embd = 10     # the dimensionality of the character embedding vectors \n",
+    "n_hidden = 64   # the number of neurons in the hidden layer of the MLP "
+   ]
   }
  ],
  "metadata": {
