--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -133,13 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_embd = 10     # the dimensionality of the character embedding vectors \n",
-    "n_hidden = 64   # the number of neurons in the hidden layer of the MLP "
+    "n_hidden = 64   # the number of neurons in the hidden layer of the MLP \n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647)   # for reproducibilty "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
