--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -140,7 +140,8 @@
     "n_embd = 10     # the dimensionality of the character embedding vectors \n",
     "n_hidden = 64   # the number of neurons in the hidden layer of the MLP \n",
     "\n",
-    "g = torch.Generator().manual_seed(2147483647)   # for reproducibilty "
+    "g = torch.Generator().manual_seed(2147483647)   # for reproducibilty \n",
+    "C = torch.randn((vocab_size, n_embd),       generator=g)\n"
    ]
   },
   {
