--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -141,7 +141,31 @@
     "n_hidden = 64   # the number of neurons in the hidden layer of the MLP \n",
     "\n",
     "g = torch.Generator().manual_seed(2147483647)   # for reproducibilty \n",
-    "C = torch.randn((vocab_size, n_embd),       generator=g)\n"
+    "C = torch.randn((vocab_size, n_embd),       generator=g)\n",
+    "# Layer 1 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1959, -0.1965, -0.5417],\n",
+       "        [ 0.9238, -1.2289, -0.6579],\n",
+       "        [-0.4129, -1.1066, -1.3378]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randn(3, 3)"
    ]
   },
   {
