--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -143,7 +143,7 @@
     "g = torch.Generator().manual_seed(2147483647)   # for reproducibilty \n",
     "C = torch.randn((vocab_size, n_embd),       generator=g)\n",
     "# Layer 1 \n",
-    "\n"
+    "W1 = torch.randn((n_embd * block_size, n_hidden),        generator=g)\n"
    ]
   },
   {
