--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -144,7 +144,8 @@
     "C = torch.randn((vocab_size, n_embd),       generator=g)\n",
     "# Layer 1 \n",
     "W1 = torch.randn((n_embd * block_size, n_hidden),   generator=g) * (5/3)/((n_embd * block_size)**0.5)\n",
-    "b1 = torch.randn(n_hidden,                          generator=g)\n"
+    "b1 = torch.randn(n_hidden,                          generator=g) * 0.1 # using b1 just for fun, it's useless because of BN \n",
+    "# Layer 2 \n"
    ]
   },
   {
