--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -146,7 +146,8 @@
     "W1 = torch.randn((n_embd * block_size, n_hidden),   generator=g) * (5/3)/((n_embd * block_size)**0.5)\n",
     "b1 = torch.randn(n_hidden,                          generator=g) * 0.1 # using b1 just for fun, it's useless because of BN \n",
     "# Layer 2 \n",
-    "W2 = torch.randn((n_hidden, vocab_size),            generator=g) * 0.01 "
+    "W2 = torch.randn((n_hidden, vocab_size),            generator=g) * 0.1 \n",
+    "b2 = torch.randn(vocab_size,                        generator=g) * 0.1 "
    ]
   },
   {
