--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -147,7 +147,10 @@
     "b1 = torch.randn(n_hidden,                          generator=g) * 0.1 # using b1 just for fun, it's useless because of BN \n",
     "# Layer 2 \n",
     "W2 = torch.randn((n_hidden, vocab_size),            generator=g) * 0.1 \n",
-    "b2 = torch.randn(vocab_size,                        generator=g) * 0.1 "
+    "b2 = torch.randn(vocab_size,                        generator=g) * 0.1 \n",
+    "# BatchNorm parameters \n",
+    "bngain = torch.randn((1, n_hidden))*0.1 + 1.0 \n",
+    "bnbias = torch.randn((1, n_hidden))*0.1 "
    ]
   },
   {
