--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -150,29 +150,37 @@
     "b2 = torch.randn(vocab_size,                        generator=g) * 0.1 \n",
     "# BatchNorm parameters \n",
     "bngain = torch.randn((1, n_hidden))*0.1 + 1.0 \n",
-    "bnbias = torch.randn((1, n_hidden))*0.1 "
+    "bnbias = torch.randn((1, n_hidden))*0.1 \n",
+    "\n",
+    "# Note: I am initializating many of these parameters in non-standard ways\n",
+    "# because sometimes initializating with e.g. all zeros could mask an incorrect\n",
+    "# implementation of the backward pass.\n",
+    "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1959, -0.1965, -0.5417],\n",
-       "        [ 0.9238, -1.2289, -0.6579],\n",
-       "        [-0.4129, -1.1066, -1.3378]])"
+       "tensor([[ 0.3895, -1.0415,  0.5867]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.randn(3, 3)"
+    "torch.randn(1, 3)"
    ]
   },
   {
