--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -155,7 +155,8 @@
     "# Note: I am initializating many of these parameters in non-standard ways\n",
     "# because sometimes initializating with e.g. all zeros could mask an incorrect\n",
     "# implementation of the backward pass.\n",
-    "\n"
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]"
    ]
   },
   {
