--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -156,7 +156,8 @@
     "# because sometimes initializating with e.g. all zeros could mask an incorrect\n",
     "# implementation of the backward pass.\n",
     "\n",
-    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]"
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
    ]
   },
   {
