--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -157,7 +157,9 @@
     "# implementation of the backward pass.\n",
     "\n",
     "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
-    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total \n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True "
    ]
   },
   {
