--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -163,9 +163,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "batch_size = 32 \n",
+    "n = batch_size # a shorter variable also, for convenience \n",
+    "# construct a minibatch \n"
+   ]
   },
   {
    "cell_type": "code",
