--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -170,7 +170,8 @@
    "source": [
     "batch_size = 32 \n",
     "n = batch_size # a shorter variable also, for convenience \n",
-    "# construct a minibatch \n"
+    "# construct a minibatch \n",
+    "ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)"
    ]
   },
   {
