--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -171,7 +171,8 @@
     "batch_size = 32 \n",
     "n = batch_size # a shorter variable also, for convenience \n",
     "# construct a minibatch \n",
-    "ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)"
+    "ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "Xb, Yb = Xtr[ix], Ytr[ix] # batch X, Y "
    ]
   },
   {
