--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -133,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4137\n"
+     ]
+    }
+   ],
    "source": [
     "n_embd = 10     # the dimensionality of the character embedding vectors \n",
     "n_hidden = 64   # the number of neurons in the hidden layer of the MLP \n",
@@ -164,9 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m n \u001b[38;5;241m=\u001b[39m batch_size \u001b[38;5;66;03m# a shorter variable also, for convenience \u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# construct a minibatch \u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m ix \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, Xtr\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], (batch_size,), generator\u001b[38;5;241m=\u001b[39m\u001b[43mg\u001b[49m)\n\u001b[1;32m      5\u001b[0m Xb, Yb \u001b[38;5;241m=\u001b[39m Xtr[ix], Ytr[ix] \u001b[38;5;66;03m# batch X, Y \u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 32 \n",
     "n = batch_size # a shorter variable also, for convenience \n",
