--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -185,23 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.3895, -1.0415,  0.5867]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.randn(1, 3)"
+    "# forward pass, \"chunkated\" into smaller steps that are possible to backward one at a time \n",
+    "\n",
+    "emb = C[Xb] # embed the characters into vectors \n",
+    "embcat = emb.view(emb.shape[0], -1) # concatenate the vectors "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
