--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -192,7 +192,8 @@
     "# forward pass, \"chunkated\" into smaller steps that are possible to backward one at a time \n",
     "\n",
     "emb = C[Xb] # embed the characters into vectors \n",
-    "embcat = emb.view(emb.shape[0], -1) # concatenate the vectors "
+    "embcat = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
+    "# Linear layer 1 \n"
    ]
   },
   {
