--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -128,7 +128,10 @@
    "source": [
     "# utility function we will use later when comparing manual gradient to PyTorch gradient \n",
     "def cmp(s, dt, t):\n",
-    "    pass "
+    "    ex = torch.all(dt == t.grad).item()\n",
+    "    app = torch.allclose(dt, t.grad)\n",
+    "    maxdiff = (dt - t.grad).abs().max().item()\n",
+    "    print(f'{s:15s} | exact: {str(ex):5s} | approximate: {str(app):5s} | maxdiff: {maxdiff}')"
    ]
   },
   {
