--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -188,15 +188,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'C' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# forward pass, \"chunkated\" into smaller steps that are possible to backward one at a time \u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m emb \u001b[38;5;241m=\u001b[39m \u001b[43mC\u001b[49m[Xb] \u001b[38;5;66;03m# embed the characters into vectors \u001b[39;00m\n\u001b[1;32m      4\u001b[0m embcat \u001b[38;5;241m=\u001b[39m emb\u001b[38;5;241m.\u001b[39mview(emb\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m# concatenate the vectors \u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Linear layer 1 \u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'C' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# forward pass, \"chunkated\" into smaller steps that are possible to backward one at a time \n",
     "\n",
     "emb = C[Xb] # embed the characters into vectors \n",
     "embcat = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
-    "# Linear layer 1 \n"
+    "# Linear layer 1 \n",
+    "hprebn = embcat @ W1 + b1 # hidden layer pre-activation\n",
+    "# BatchNorm layer\n",
+    "bnmeani = 1/n*hprebn.sum(0, keepdim=True)\n",
+    "bndiff = hprebn - bnmeani\n",
+    "bndiff2 = bndiff**2\n",
+    "bnvar = 1/(n-1)*(bndiff2).sum(0, keepdim=True) # note: Bessel's correction (dividing by n-1, not n)\n",
+    "bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "bnraw = bndiff * bnvar_inv\n",
+    "hpreact = bngain * bnraw + bnbias\n",
+    "# Non-linearity\n",
+    "h = torch.tanh(hpreact) # hidden layer\n",
+    "# Linear layer 2\n",
+    "logits = h @ W2 + b2 # output layer\n",
+    "# cross entropy loss (same as F.cross_entropy(logits, Yb))\n",
+    "logit_maxes = logits.max(1, keepdim=True).values\n",
+    "norm_logits = logits - logit_maxes # subtract max for numerical stability\n",
+    "counts = norm_logits.exp()\n",
+    "counts_sum = counts.sum(1, keepdims=True)\n",
+    "counts_sum_inv = counts_sum**-1 # if I use (1.0 / counts_sum) instead then I can't get backprop to be bit exact...\n",
+    "probs = counts * counts_sum_inv\n",
+    "logprobs = probs.log()\n",
+    "loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "# PyTorch backward pass\n",
+    "for p in parameters:\n",
+    "  p.grad = None\n",
+    "for t in [logprobs, probs, counts, counts_sum, counts_sum_inv, # afaik there is no cleaner way\n",
+    "          norm_logits, logit_maxes, logits, h, hpreact, bnraw,\n",
+    "         bnvar_inv, bnvar, bndiff2, bndiff, hprebn, bnmeani,\n",
+    "         embcat, emb]:\n",
+    "  t.retain_grad()\n",
+    "loss.backward()\n",
+    "loss"
    ]
   },
   {
