--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -323,7 +323,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 2: backprop through cross_entropy but all in one go\n",
+    "# to complete this challenge look at the mathematical expression of the loss,\n",
+    "# take the derivative, simplify the expression, and just write it out\n",
+    "\n",
+    "# forward pass\n",
+    "\n",
+    "# before:\n",
+    "# logit_maxes = logits.max(1, keepdim=True).values\n",
+    "# norm_logits = logits - logit_maxes # subtract max for numerical stability\n",
+    "# counts = norm_logits.exp()\n",
+    "# counts_sum = counts.sum(1, keepdims=True)\n",
+    "# counts_sum_inv = counts_sum**-1 # if I use (1.0 / counts_sum) instead then I can't get backprop to be bit exact...\n",
+    "# probs = counts * counts_sum_inv\n",
+    "# logprobs = probs.log()\n",
+    "# loss = -logprobs[range(n), Yb].mean()\n",
+    "\n",
+    "# now:\n",
+    "loss_fast = F.cross_entropy(logits, Yb)\n",
+    "print(loss_fast.item(), 'diff:', (loss_fast - loss).item())"
+   ]
   }
  ],
  "metadata": {
