--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -344,6 +344,42 @@
     "loss_fast = F.cross_entropy(logits, Yb)\n",
     "print(loss_fast.item(), 'diff:', (loss_fast - loss).item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# backward pass\n",
+    "\n",
+    "dlogits = F.softmax(logits, 1)\n",
+    "dlogits[range(n), Yb] -= 1\n",
+    "dlogits /= n\n",
+    "\n",
+    "cmp('logits', dlogits, logits) # I can only get approximate to be true, my maxdiff is 6e-9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
