--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -365,7 +365,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logits.shape, Yb.shape "
+   ]
   },
   {
    "cell_type": "code",
