--- a/backprop_master.ipynb
+++ b/backprop_master.ipynb
@@ -374,7 +374,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "F.softmax(logits, 1)(0)"
+   ]
   },
   {
    "cell_type": "code",
